--- a/src/dialog/WalletInfoDialog.ui
+++ b/src/dialog/WalletInfoDialog.ui
@@ -84,14 +84,14 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <widget class="HelpLabel" name="label_keysFileLabel">
        <property name="text">
         <string>Keys file:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QLabel" name="label_keysFile">
        <property name="text">
         <string>TextLabel</string>
@@ -101,14 +101,14 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="7" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Cache size:</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="7" column="1">
       <widget class="QLabel" name="label_cacheSize">
        <property name="text">
         <string>TextLabel</string>
@@ -118,20 +118,34 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="6" column="0">
       <widget class="HelpLabel" name="label_cacheFileLabel">
        <property name="text">
         <string>Cache file:</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="6" column="1">
       <widget class="QLabel" name="label_cacheFile">
        <property name="text">
         <string>TextLabel</string>
        </property>
        <property name="textInteractionFlags">
         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Lookahead:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="label_subaddressLookahead">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </item>
