--- a/src/wizard/PageWalletRestoreSeed.ui
+++ b/src/wizard/PageWalletRestoreSeed.ui
@@ -95,30 +95,6 @@
     </spacer>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Seed offset passphrase:</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="line_seedOffset">
-     <property name="echoMode">
-      <enum>QLineEdit::Normal</enum>
-     </property>
-     <property name="placeholderText">
-      <string>Leave blank if in doubt</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="check_overrideCreationDate">
-     <property name="text">
-      <string>Override embedded wallet creation date</string>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QLabel" name="label_errorString">
      <property name="text">
       <string>errorString</string>
@@ -137,6 +113,30 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btnOptions">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
