--- a/src/dialog/DebugInfoDialog.ui
+++ b/src/dialog/DebugInfoDialog.ui
@@ -212,6 +212,9 @@
        <property name="text">
         <string>TextLabel</string>
        </property>
+       <property name="textInteractionFlags">
+        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+       </property>
       </widget>
      </item>
      <item row="13" column="1">
