--- a/src/wizard/PageNetwork.ui
+++ b/src/wizard/PageNetwork.ui
@@ -51,7 +51,7 @@
      <item>
       <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>In most cases you want to let Feather pick one at random. Nodes are hosted by the Feather team and trusted members of the Monero community. </string>
+        <string>In most cases you want to let Feather pick one at random. Nodes are hosted by the developers and trusted members of the Monero community. </string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
@@ -171,7 +171,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Custom node:</string>
+           <string>Node:</string>
           </property>
          </widget>
         </item>
