settings: rename new settings dialog

--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SettingsNew</class>
- <widget class="QDialog" name="SettingsNew">
+ <class>Settings</class>
+ <widget class="QDialog" name="Settings">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -1087,7 +1087,7 @@
   <connection>
    <sender>closeButton</sender>
    <signal>accepted()</signal>
-   <receiver>SettingsNew</receiver>
+   <receiver>Settings</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -1103,7 +1103,7 @@
   <connection>
    <sender>closeButton</sender>
    <signal>rejected()</signal>
-   <receiver>SettingsNew</receiver>
+   <receiver>Settings</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
