--- a/src/dialog/DebugInfoDialog.ui
+++ b/src/dialog/DebugInfoDialog.ui
@@ -183,14 +183,14 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="0">
+     <item row="12" column="0">
       <widget class="QLabel" name="label_18">
        <property name="text">
         <string>Tor status:</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="12" column="1">
       <widget class="QLabel" name="label_torStatus">
        <property name="text">
         <string>TextLabel</string>
@@ -200,14 +200,14 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="0">
+     <item row="13" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Tor level:</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
+     <item row="13" column="1">
       <widget class="QLabel" name="label_torLevel">
        <property name="text">
         <string>TextLabel</string>
@@ -217,21 +217,21 @@
        </property>
       </widget>
      </item>
-     <item row="13" column="1">
+     <item row="14" column="1">
       <widget class="Line" name="line_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="14" column="0">
+     <item row="15" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Network type:</string>
        </property>
       </widget>
      </item>
-     <item row="14" column="1">
+     <item row="15" column="1">
       <widget class="QLabel" name="label_netType">
        <property name="text">
         <string>TextLabel</string>
@@ -241,14 +241,14 @@
        </property>
       </widget>
      </item>
-     <item row="15" column="0">
+     <item row="16" column="0">
       <widget class="QLabel" name="label_23">
        <property name="text">
         <string>Seed type:</string>
        </property>
       </widget>
      </item>
-     <item row="15" column="1">
+     <item row="16" column="1">
       <widget class="QLabel" name="label_seedType">
        <property name="text">
         <string>TextLabel</string>
@@ -258,14 +258,14 @@
        </property>
       </widget>
      </item>
-     <item row="16" column="0">
+     <item row="17" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Device type:</string>
        </property>
       </widget>
      </item>
-     <item row="16" column="1">
+     <item row="17" column="1">
       <widget class="QLabel" name="label_deviceType">
        <property name="text">
         <string>TextLabel</string>
@@ -275,14 +275,14 @@
        </property>
       </widget>
      </item>
-     <item row="17" column="0">
+     <item row="18" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>View only:</string>
        </property>
       </widget>
      </item>
-     <item row="17" column="1">
+     <item row="18" column="1">
       <widget class="QLabel" name="label_viewOnly">
        <property name="text">
         <string>TextLabel</string>
@@ -292,14 +292,14 @@
        </property>
       </widget>
      </item>
-     <item row="18" column="0">
+     <item row="19" column="0">
       <widget class="QLabel" name="label_11">
        <property name="text">
         <string>Primary only:</string>
        </property>
       </widget>
      </item>
-     <item row="18" column="1">
+     <item row="19" column="1">
       <widget class="QLabel" name="label_primaryOnly">
        <property name="text">
         <string>TextLabel</string>
@@ -309,21 +309,21 @@
        </property>
       </widget>
      </item>
-     <item row="19" column="1">
+     <item row="20" column="1">
       <widget class="Line" name="line_4">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="20" column="0">
+     <item row="21" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Operating system:</string>
        </property>
       </widget>
      </item>
-     <item row="20" column="1">
+     <item row="21" column="1">
       <widget class="QLabel" name="label_OS">
        <property name="text">
         <string>TextLabel</string>
@@ -333,20 +333,34 @@
        </property>
       </widget>
      </item>
-     <item row="21" column="0">
+     <item row="22" column="0">
       <widget class="QLabel" name="label_24">
        <property name="text">
         <string>Timestamp:</string>
        </property>
       </widget>
      </item>
-     <item row="21" column="1">
+     <item row="22" column="1">
       <widget class="QLabel" name="label_timestamp">
        <property name="text">
         <string>TextLabel</string>
        </property>
        <property name="textInteractionFlags">
         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>Proxy:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1">
+      <widget class="QLabel" name="label_proxy">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </item>
