--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -49,6 +49,7 @@
     <file>assets/images/ledger.png</file>
     <file>assets/images/ledger_unpaired.png</file>
     <file>assets/images/lightning.png</file>
+    <file>assets/images/trocadorApp_logo.png</file>
     <file>assets/images/localMonero_search.svg</file>
     <file>assets/images/localMonero_buy.svg</file>
     <file>assets/images/localMonero_buy_white.svg</file>
