--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -360,6 +360,32 @@
               <property name="currentIndex">
                <number>0</number>
               </property>
+              <widget class="QWidget" name="tabTrocadorApp">
+               <attribute name="icon">
+                <iconset resource="assets.qrc">
+                 <normaloff>:/assets/images/trocadorApp_logo.png</normaloff>:/assets/images/trocadorApp_logo.png</iconset>
+               </attribute>
+               <attribute name="title">
+                <string>TrocadorApp</string>
+               </attribute>
+               <layout class="QVBoxLayout" name="verticalLayout_13">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <layout class="QVBoxLayout" name="trocadorAppLayout"/>
+                </item>
+               </layout>
+              </widget>
               <widget class="QWidget" name="tabLocalMonero">
                <attribute name="icon">
                 <iconset resource="assets.qrc">
