--- a/src/plugins/xmrig/XMRigWidget.ui
+++ b/src/plugins/xmrig/XMRigWidget.ui
@@ -419,6 +419,16 @@
              <item row="7" column="1">
               <widget class="QLineEdit" name="lineEdit_password"/>
              </item>
+             <item row="8" column="0">
+              <widget class="QLabel" name="label_4">
+               <property name="text">
+                <string>Extra command-line options:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="1">
+              <widget class="QLineEdit" name="lineEdit_extraOptions"/>
+             </item>
             </layout>
            </item>
           </layout>
