assets: add password-show-{on,off}.svg

--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -62,6 +62,8 @@
     <file>assets/images/network.png</file>
     <file>assets/images/nw_32px.png</file>
     <file>assets/images/offline_tx.png</file>
+    <file>assets/images/password-show-off.svg</file>
+    <file>assets/images/password-show-on.svg</file>
     <file>assets/images/person.svg</file>
     <file>assets/images/preferences.svg</file>
     <file>assets/images/qrcode.png</file>
